test/ui/src/compile_fail/std/emit_control_param_unknown.rs
fn main() {
    emit::emit!(x, "template");
}
